API - Simplifing model to remove Team/Player in teams and multiple score